# 42KL-Piscine-Data-Science

./: README.md
Python00/ex00/: Hello.py
Python00/ex01/: format_ft_time.py
Python00/ex02/: find_ft_type.py  tester.py
Python00/ex03/: NULL_not_found.py  tester.py
Python00/ex04/: whatis.py
Python00/ex05/: building.py
Python00/ex06/: filterstring.py  ft_filter.py
Python00/ex07/: sos.py
Python00/ex08/: Loading.py  tester.py
Python00/ex09/ft_package/: README.md  pyproject.toml
Python00/ex09/ft_package/src/ft_package_laian/: __init__.py  count_in_list.py
Python00/ex09/test/: tester.py
Python01/ex00/: give_bmi.py  tester.py
Python01/ex01/: array2D.py  tester.py
Python01/ex02/: load_image.py  tester.py
Python01/ex03/: load_image.py  zoom.py
Python01/ex04/: load_image.py  rotate.py
Python01/ex05/: pimp_image.py  tester.py
Python02/ex00/: load_csv.py  tester.py
Python02/ex01/: aff_life.py  load_csv.py
Python02/ex02/: aff_pop.py  load_csv.py
Python02/ex03/: load_csv.py  projection_life.py
Python03/ex00/: tester.py
Python03/ex01/: S1E9.py  tester.py
Python03/ex02/: DiamondTrap.py  S1E7.py  tester.py
Python03/ex03/: ft_calculator.py  tester.py
Python03/ex04/: ft_calculator.py
Python04/ex00/: statistics.py  tester.py
Python04/ex01/: in_out.py  tester.py
Python04/ex02/: callLimit.py  tester.py
Python04/ex03/: new_student.py  tester.py
